# rmc

./: README.md
Android/GDExtension-Android-ObtainFile/: settings.gradle.kts
Android/GDExtension-Android-ObtainFile/plugin/: CMakeLists.txt  build.gradle.kts
Android/GDExtension-Android-ObtainFile/plugin/export_scripts_template/: plugin.cfg  plugin.gdextension
Android/GDExtension-Android-ObtainFile/plugin/src/main/cpp/: plugin_jni.cpp
Android/GDExtension-Android-Sensors/: settings.gradle.kts
Android/GDExtension-Android-Sensors/plugin/: build.gradle.kts
Android/GDExtension-Android-Sensors/plugin/export_scripts_template/: plugin.gdextension
Godot/: .gitignore  export_presets.cfg  icon.svg.import  project.godot
Godot/addons/EditorImport/: file_import.gd  import_plugin.gd  plugin.cfg
Godot/addons/GDExtensionAndroidObtainFile/: export_plugin.gd
Godot/addons/GDExtensionAndroidSensors/: export_plugin.gd  plugin.cfg
Godot/global_status/: GameStatus.gd  GameStatus.tscn
Godot/lib/: rythm.gdextension
Godot/node/: ScreenAspectSprite.gd  ScreenAspectSprite.tscn
Godot/screen/GameMain/: CamF73A.tmp  Camera.gd  Camera.tscn  Determine.gd  Determine.tscn  Index2D.BgForBg.gdshader  Index2D.gd  Index2D.tscn  Index3d.gd  Index3d.tscn  Object.gd  Object.tscn  arrow.png.import  circle.png.import  index.gd  index.tscn  object.png.import
Godot/screen/GameResult/: index.gd  index.tscn
Godot/screen/GameTitle/: GyroscopeAlign.gd  GyroscopeAlign.tscn  index.gd  index.tscn
Rust/rythm/: Cargo.toml  build.bat  build.sh
Rust/rythm/src/: beatmap.rs  lib.rs  video.rs
(+2 files in other folders)
